--- a/src/app/index-content-pending-incident/pending-incident.component.css
+++ b/src/app/index-content-pending-incident/pending-incident.component.css
@@ -3,3 +3,7 @@
     height: 50px;
     margin-left: 20px;
 }
+
+nz-date-picker, nz-month-picker, nz-range-picker, nz-week-picker {
+    margin: 0 8px 12px 0;
+  }
